# gptgladiator

./: .gitignore  ChatBot.py  Gladiator.py  MANIFEST.in  README.md  defaults.py  main.py  mocks.py  prompts.py  pyproject.toml  reply.py  requirements.txt  setup.py  streamlit_ui.py  ui.py
.streamlit/: config.toml
gladiator/: ChatBot.py  GPTModel.py  Gladiator.py  __init__.py  gladiator.py  helpers.py  mocks.py  prompts.py
gladiator/models/: reply.py
gladiator/services/: gladiator_interface.py  gladiator_module.py  gladiator_service.py
gladiator/static/: style.css
gladiator/templates/: base.html  index.html
gptgladiator/: __init__.py
tests/: test_gladiator_service.py
