[project]
name = "gladiator-app"
version = "1.0.0"
dependencies = [
    "flask",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["gladiator"]

[tool.setuptools.packages.find]
include = ["gladiator.static", "gladiator.templates"]
exclude = ["instance", "tests*"]
namespaces = false